[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://src/sprites/ComputerIcons1.png" type="Texture" id=3]
[ext_resource path="res://src/animations/player.tres" type="SpriteFrames" id=4]
[ext_resource path="res://src/theme/HUDTheme.tres" type="Theme" id=5]
[ext_resource path="res://src/sprites/CreditIcon.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 16 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.495441, 1 ), 0.0, -0.791712, 0, 0, Vector2( 1, 0 ), -1.18957, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
speed = Vector2( 500, 500 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 4 )
animation = "down"
speed_scale = 1.5
playing = true

[node name="SpriteOld" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 48 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 75 )
collision_mask = 4

[node name="WorkProgress" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.74902 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -31.0
margin_bottom = -31.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WorkProgress"]
margin_left = -72.0
margin_top = -104.0
margin_right = 64.0
margin_bottom = -72.0
grow_horizontal = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WorkProgress/VBoxContainer"]
margin_top = 5.0
margin_right = 136.0
margin_bottom = 39.0
text = "Working..."
align = 1

[node name="ProgressBar" type="ProgressBar" parent="WorkProgress/VBoxContainer"]
margin_top = 43.0
margin_right = 136.0
margin_bottom = 66.0

[node name="WorkTimer" type="Timer" parent="."]
one_shot = true

[node name="PassiveGainTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Holding" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -88 )
texture = ExtResource( 3 )

[node name="CreditGainParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -64 )
emitting = false
lifetime = 1.3
one_shot = true
speed_scale = 1.1
local_coords = false
texture = ExtResource( 6 )
gravity = Vector2( 0, -98 )
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[connection signal="timeout" from="WorkTimer" to="." method="_on_WorkTimer_timeout"]
[connection signal="timeout" from="PassiveGainTimer" to="." method="_on_PassiveGainTimer_timeout"]
